--- a/package.json
+++ b/package.json
@@ -19,7 +19,21 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    "cordova-plugin-media",
+    "cordova-plugin-camera",
+    "phonegap-plugin-barcodescanner",
+    "cordova-plugin-media-capture",
+    "cordova-plugin-file-transfer",
+    "de.appplant.cordova.plugin.background-mode",
+    "de.appplant.cordova.plugin.local-notification",
+    "cordova-plugin-background-app",
+    "cordova-plugin-backbutton",
+    "cordova-open",
+    "cordova-background-geolocation-lt",
+    "cordova-plugin-websocket"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
